intermediate commit of front Главная страница

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -283,7 +283,7 @@
                 <br>
                 <label>Комплект товара</label>
                 <div class="input-group mt-2 mb-2">
-                    <input type="text" id="inputvalue" class="form-control">
+                    <input type="text" id="inputvalue" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAdd" name="addComplect" onclick="addInput(this)"
                         type="button"><i class="fa fa-plus"></i></button>
                     <br>
@@ -332,24 +332,16 @@
             <div class="tab" style="display: none">
 
                 <h2>Описнание</h2>
-                <!--                <textarea>-->
 
-                <!--                </textarea>-->
                 {{ form8.description }}
 
                 <label>Ключевые слова</label>
                 <div class="input-group mt-2 mb-2">
-                    <input type="text" id="keyValue" class="form-control">
+                    <input type="text" id="keyValue" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAddkey" name="addkey" onclick="addKey(this)"
                         type="button"><i class="fa fa-plus"></i></button>
-                    <br>
                 </div>
                 <div id="keyDiv"></div>
-                <br>
-                <br>
-                <label>Дополнительная информация о товаре</label>
-                <button class="btn btn-outline-secondary" onclick="showExtraInputs()" type="button"><i
-                        class="fa fa-arrow-down"></i></button>
                 <br>
                 <!--         IMAGE       -->
 
@@ -359,8 +351,16 @@
                         <input id="fileupload" class="form-control" name="product_photos" type="file" />
                     </div>
                 </div>
-
+                <br>
                 <!--         IMAGE END      -->
+
+                <label>Дополнительная информация о товаре</label>
+                <button class="btn btn-outline-secondary" onclick="showExtraInputs()" type="button">
+                    <i class="fa fa-arrow-down"></i>
+                </button>
+                <br>
+                <br>
+
 
 
                 <div id="extraInputs" class="d-none">
@@ -401,7 +401,7 @@
             <div style="overflow:auto;" id="next-previous">
                 <div style="float:right;">
                     <button type="button" id="prevBtn" style="display: none;" onclick="nextPrev(-1)">
-                        <i class="fa fa-angle-double-left"></i> 
+                        <i class="fa fa-angle-double-left"></i>
                     </button>
                     <button name="product_creator" type="button" id="nextBtn" onclick="nextPrev(1)">
                         <i class="fa fa-angle-double-right"></i>
@@ -437,36 +437,61 @@
         currentTab = 0;
 
     function addInput(el) {
-        inputnum++;
         let input = el.parentElement.getElementsByTagName("input")[0];
-        if (inputnum < 15) {
+        if (inputnum < 15 && input.value) {
+            inputnum++;
+            input.removeAttribute("disabled");
+            input.placeholder = "";
             var $inputGroup =
                 `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 1)" type="button"><i class="fa fa-minus"></i></button> <input type="text" class="form-control" value="${document.getElementById('inputvalue').value}" disabled> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span></button></div>`;
             document.getElementById("inputDiv").insertAdjacentHTML("afterbegin", $inputGroup);
             input.value = "";
+        } else if (inputnum >= 15) {
+            input.value = "";
+            input.setAttribute("disabled", "disabled");
+            input.placeholder = "Простите, но вы ввели максимальное количество комплектов";
+        } else {
+            input.placeholder = "Для добавления элемента необходимо заполнить это поле";
         }
     }
 
-    function removeInput(el) {
-        el.parentElement.remove()
+    function removeInput(el, arg) {
+        let mainInput = el.parentElement.parentElement.parentElement.getElementsByClassName("changible")[0];
+        arg ? inputnum-- : keynum--;
+        if (inputnum < 15 || keynum < 15) {
+            mainInput.removeAttribute("disabled");
+            mainInput.placeholder = "";
+        }
+        el.parentElement.remove();
     }
 
     function changeInput(el) {
         let inputPole = el.parentElement.getElementsByTagName("input")[0];
         let BtnImage = el.parentElement.getElementsByTagName("span")[0];
-        inputPole.disabled ? BtnImage.innerHTML = "edit_off" : BtnImage.innerHTML = "mode_edit";
-        inputPole.disabled ? inputPole.removeAttribute("disabled") : inputPole.setAttribute("disabled", "disabled");
+        inputPole.placeholder = "";
+        if (inputPole.value){
+            inputPole.disabled ? BtnImage.innerHTML = "edit_off" : BtnImage.innerHTML = "mode_edit";
+            inputPole.disabled ? inputPole.removeAttribute("disabled") : inputPole.setAttribute("disabled", "disabled");
+        } else {
+            inputPole.placeholder = "Заполните это поле или удалите его";
+        }
     }
 
     function addKey(el) {
         keynum++;
-        console.log(el)
         let key = el.parentElement.getElementsByTagName("input")[0];
-        if (keynum < 15) {
+        key.placeholder = "";
+        if (keynum < 15 && key.value) {
             var $inputGroup =
                 `<div class="input-group mt-2 mb-2 w-75"> <button class="btn btn-outline-secondary" onclick="removeInput(this, 0)" type="button"><i class="fa fa-minus"></i></button> <input type="text" class="form-control" disabled value="${document.getElementById('keyValue').value}"> <button class="btn btn-outline-secondary" onclick="changeInput(this)" type="button"><span class="material-icons"> mode_edit </span> </div>`;
             document.getElementById("keyDiv").insertAdjacentHTML("afterbegin", $inputGroup);
             key.value = "";
+        } else if (keynum >= 15) {
+            input.value = "";
+            key.setAttribute("disabled", "disabled");
+            key.placeholder = "Простите, но вы ввели максимальное количество ключевых слов";
+        } else {
+            key.placeholder = "Для добавления элемента необходимо заполнить это поле";
         }
     }
 
