--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -20,7 +20,7 @@
                 <div>
                     <div class="uk-card-body">
                         <h4 class="product-card-details-product-name uk-text-break">
-                            {{product.product_name}}
+                            {{product}}
                         </h4>
 
                         <hr class="uk-divider-medium uk-margin-samll ">
