--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,4 +1,4 @@
-<nav class="uk-navbar-container uk-text-middle" uk-navbar>
+<nav class="uk-navbar-container  uk-text-middle" uk-navbar style="background-color: #d3d2d2;">
     {% if user.is_authenticated %}
 
     <div class="uk-navbar-left">
