--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -2,7 +2,97 @@
 
 {% block content %}
 
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <nav class="uk-navbar-container" uk-navbar
+        style="position: relative; z-index: 980; padding: 0 10%; background-color: #f8f8f8 !important;">
 
+        <div class="uk-navbar-left">
+
+            <ul class="uk-navbar-nav">
+                <li class="uk-active">
+                    {% for item in submenu %}
+                    {% if item.xpos == 'left' and item.position == 'out' %}
+                    <a href="{{item.link}}">{{item.text}}</a>
+                    {% endif %}
+                    {% endfor %}
+                    <div class="uk-navbar-dropdown uk-navbar-dropdown-width-4">
+                        <div class="uk-navbar-dropdown-grid uk-child-width-1-5" uk-grid>
+                            <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for item in submenu %}
+                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "1" %}
+                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for item in submenu %}
+                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "2" %}
+                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for item in submenu %}
+                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "3" %}
+                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for item in submenu %}
+                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "4" %}
+                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for item in submenu %}
+                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "5" %}
+                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+
+        <div class="uk-navbar-center" style="width: 40%; margin: 0 auto; font-size: 25px;">
+
+            <ul class="uk-navbar-nav" style="width: 100%;">
+                <form class="uk-search uk-search-default" style="width: 100%;">
+                    <input class="uk-search-input" type="search" placeholder="Search" style="width: 100%;">
+                </form>
+            </ul>
+
+        </div>
+
+        <div class="uk-navbar-right">
+
+            <ul class="uk-navbar-nav">
+                {% for item in submenu %}
+                {% if item.xpos == 'right' %}
+                <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+
+        </div>
+
+    </nav>
+</div>
 
 <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
     uk-slideshow="min-height: 300; max-height: 600; animation: push">
@@ -31,6 +121,38 @@
 
 
 
+<div class="uk-section uk-section-default">
+    <div class="uk-container">
+        <h2>Скидки</h2>
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-grid">
+
+                {%for product in products %}
+
+                <li>
+                    <div class="uk-panel" style="color: black">
+                        <a href="creators/goods/{{ product.id }}"
+                            class="uk-display-inline-block uk-card uk-card-body uk-card-hover uk-link-toggle uk-width-medium">
+                            <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
+                            <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
+                            <p class="uk-text-truncate">{{ product.description }}</p>
+                            <p>{{ product.cost }}</p>
+                        </a>
+                    </div>
+                </li>
+
+                {% endfor %}
+
+            </ul>
+            <a class="uk-position-center-left uk-position uk-hidden-hover" href="#" uk-slidenav-previous
+                uk-slider-item="previous" style="color: black !important;"></a>
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+                uk-slider-item="next" style="color: black !important;"></a>
+        </div>
+    </div>
+</div>
+
+
 
 <div class="uk-section uk-section-default">
     <div class="uk-container">
@@ -40,16 +162,17 @@
         <div class="uk-grid-match uk-child-width-1-4@m" uk-grid>
             {%for product in products %}
 
-                <div>
-                    <a href="creators/goods/{{ product.id }}" class="uk-display-inline-block uk-card uk-card-body uk-card-hover uk-link-toggle uk-width-medium">
-                            <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
-                            <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
-                            <p>{{ product.description }}</p>
-                            <p>{{ product.cost }}</p>
-                            <!-- <a href='{{ product.id }}'
+            <div>
+                <a href="creators/goods/{{ product.id }}"
+                    class="uk-display-inline-block uk-card uk-card-body uk-card-hover uk-link-toggle uk-width-medium">
+                    <img src="{{ product.picture.url }}" width="1800" height="1200" alt="">
+                    <h3 class="uk-card-title uk-text-truncate">{{ product.product_name }}</h3>
+                    <p class="uk-text-truncate">{{ product.description }}</p>
+                    <p>{{ product.cost }}</p>
+                    <!-- <a href='{{ product.id }}'
                                 class="uk-button uk-button-primary uk-button-large uk-text-center uk-border-rounded uk-margin-top">Подробнее</a> -->
-                    </a>
-                </div>
+                </a>
+            </div>
 
             {% endfor %}
         </div>
@@ -90,7 +213,7 @@
                     <p>
                         <a href="#!" class="text-reset">Angular</a>
                     </p>
-                    <p> 
+                    <p>
                         <a href="#!" class="text-reset">React</a>
                     </p>
                     <p>
