--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class="uk-margin-large-left uk-margin-medium-top uk-flex" style="width: 100%">
+<div class="uk-margin-large-left uk-margin-medium-top uk-flex">
     <div style="width: 20%">
             <div class="uk-margin-small-left">
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
