--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -43,7 +43,7 @@
                         <label class="uk-form-label">
                             <h4>Город</h4>
                         </label>
-                        <input class="uk-input uk-border-rounded" name="city" type="number" id="city"
+                        <input class="uk-input uk-border-rounded" name="city" id="city"
                             placeholder="{{user.city}}" value="{{user.city}}">
                     </div>
 
@@ -52,7 +52,7 @@
                             <h4>Телефон</h4>
                         </label>
                         <input class="uk-input uk-border-rounded" name="phone" type="number" id="phone"
-                            placeholder="{{user.phone}}" value="{{user.phone}}"">
+                            placeholder="{{user.phone}}" value="{{user.phone}}">
                     </div>
 
                     <div class=" uk-width-1-1@s">
