--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<!-- start of left menu -->
+    <!-- start of left menu -->
 
     <div class="uk-margin-large-left uk-margin-medium-top uk-flex">
         <div style="width: 20%">
@@ -109,18 +109,130 @@
                 </div>
             </div>
         </div>
-<!-- end of left menu -->
+        <!-- end of left menu -->
         <br>
         <br>
-        <div id="content" class="row" style="margin-top: 50px">
+        <div id="content" class="row uk-padding" style="margin-top: 50px; width: 80%;">
+            <div class="uk-card uk-card-default uk-grid-collapse" uk-grid>
+
             {% for creator in creators %}
-            <p>{{creator}}</p>
+
+                <div>
+                    <div class="uk-card">
+                        <div class="uk-card-header uk-flex uk-flex-middle" style="border: none;">
+                            <div class="uk-cover-container" style="display: inline-block;">
+                                <img src="../../media/{{creator.cover}}" alt="" uk-cover>
+                                <canvas width="200" height="200"></canvas>
+                            </div>
+                            <div class="uk-margin-left" style="display: inline-block;">
+                                <h2>{{creator.first_name}}</h2>
+                                <span>3,2 &nbsp;</span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <br>
+                                <br>
+                                <p>
+                                    <i class="fa fa-check uk-border-circle"
+                                        style="padding: 5px; color: white; background-color: green;"></i>
+                                    &nbsp; Проверенный пользователь</p>
+                            </div>
+
+                            <div class="uk-divider-vertical uk-margin-medium-left uk-margin-small-right"></div>
+
+                            <div class="uk-margin-small-left">
+                                <a class="uk-button uk-button-primary" href="">Посмотреть</a>
+                                <br>
+                                <h5>доступные регионы</h5>
+                                <p class="uk-text-nowrap">Москва и Московская область Ближнее Подмосковье Украина</p>
+                            </div>
+                        </div>
+                        <div class="uk-card-body" >
+                            <div>
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <br>
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                                <img src="{{creator.email.userImage.url}}" alt="" width="120" style="margin: 2px 0;">
+                            </div>
+                            <br>
+                            <br>
+
+                        </div>
+                        <div class="uk-card-footer" style="border: none;">
+                            <h3>Образование и опыт</h3>
+                            <br>
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+
+                            <div class="uk-width-1-4" style="display: inline-block;">
+                                <p><b>Медсестра</b></p>
+                                <p>3 года</p>
+                            </div>
+                        </div>
+                        <hr class="uk-divider-large">
+                    </div>
+                </div>
+
             {% endfor %}
+        </div>
+
         </div>
     </div>
 
 </body>
 
+
+
+
+
+
+
+<p class="uk-text-break">{{creator.description}}</p>
+<p>{{creator.email}}</p>
+<p>{{creator.cover}}</p>
+<p>{{creator.description}}</p>
+<p>{{creator.is_company}}</p>
+<p>{{creator.company_name}}</p>
+<p>{{creator.telegram}}</p>
+<p>{{creator.vk}}</p>
+<p>{{creator.whatsapp}}</p>
+<p>{{creator.instagram}}</p>
+<p>{{creator.tag}}</p>
+<p>{{creator.published}}</p>
 <style>
     .textStyleHeader p {
         font-family: 'Inter';
