add out products from database

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,3 +1,5 @@
+
+{% for product in products %}
 <div>
     <div class="uk-flex">
         <img src="https://justnike.ru/image/cache/data/Nike%20M2K%20Tekno/80731_Shoes%20(146)-1200x748-700x500.jpg" width="250px" height="90px" style="margin: 2% 5% 2% 2%; border-radius: 2em">
@@ -49,6 +51,9 @@
 
     </div>
 </div>
+
+{% endfor %}
+
 <style>
     .textSmallInfo {
         margin: auto;
