--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div>
-                <a class="uk-button uk-button-default" href="#" style="background-color:  #2D3995; color: white; border-radius: 5px; width: 50%;margin-top: 5%; margin-left: 65%">ПОДРОБНЕЕ</a>
+                <a class="uk-button uk-button-default" href="{{ product.id }}" style="background-color:  #2D3995; color: white; border-radius: 5px; width: 50%;margin-top: 5%; margin-left: 65%">ПОДРОБНЕЕ</a>
             </div>
         </div>
 
