--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -104,6 +104,8 @@
                     </div>
                 </div>
             </div>
+        <button class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom">Применить</button>
+
     </div>
 
 <!--        <div class="position-relative">-->
