--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -112,7 +112,7 @@
         <!-- end of left menu -->
         <br>
         <br>
-        <div id="content" class="row uk-padding" style="margin-top: 50px; width: 80%;">
+        <div id="content" class="row uk-padding-large" style="margin-top: 50px; width: 80%;">
             <div class="uk-card uk-card-default uk-grid-collapse" uk-grid>
 
             {% for creator in creators %}
