--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -240,13 +240,16 @@
 
 <script type="text/javascript">
     $(function () {
-        if (window.location.search){
-            var pageNumber = window.location.search[1]; //here is a number of page
+        var num = window.location.search[1];
+        if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
+            // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
+            num = num; //here is a number of page
         } else {
-            var pageNumber = "1";
+            num = "1";
         }
+
         var xhr = new XMLHttpRequest()
-        xhr.open('GET', `becomeCreatorTemplates/${pageNumber}/`)
+        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
         }
