--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -189,6 +189,10 @@
                     <a href="#">Главная</a>
                 </li>
 
+                <li class="Btn">
+                    <a href="#">Настройки</a>
+                </li>
+
 
                 <li class="active">
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой
