--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>USER DATA</h1>
-</body>
-</html>
+<div class="d-flex flex-row" id="product_creator">
+    <h1 style="margin: 10px auto">Настройки</h1>
+</div>
+<div>
+    <div class="card">
+        <div class="uk-card-header">
+            <h3>Данные продавца</h3>
+        </div>
+    </div>
+</div>
