--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -47,7 +47,7 @@
             <div class="uk-navbar-left">
 
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href="#">
+                    <li class="uk-active"><a href="/">
                             <h1 class="uk-margin-remove">BeFreela</h1>
                         </a></li>
                 </ul>
