added search btn to index.html

--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -1,7 +1,24 @@
 <div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-8">
         <form id="regForm" method="POST" action="" enctype="multipart/form-data">
-            <h1 class="mb-5">Создать товар</h1>
+            <h1 id="register">Настройки профиля</h1>
+                    <div class="all-steps" id="all-steps">
+                        <a onclick="surTab(0)">
+                            <span class="step">
+								<i class="fa fa-user"></i>
+							</span>
+                        </a>
+                        <a onclick="surTab(1)">
+                            <span class="step">
+								<i class="fa fa-unlock-alt"></i>
+							</span>
+                        </a>
+                        <a onclick="surTab(2)">
+                            <span class="step">
+								<i class="fa fa-unlock-alt"></i>
+							</span>
+                        </a>
+                    </div>
 
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
