--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -73,6 +73,7 @@
 
             <ul class="uk-navbar-nav" style="width: 100%;">
                 <form class="uk-search uk-search-default" style="width: 100%;">
+                    <a href="" class="uk-search-icon-flip" uk-search-icon></a>
                     <input class="uk-search-input" type="search" placeholder="Search" style="width: 100%;">
                 </form>
             </ul>
