--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/813ad2426d.js" crossorigin="anonymous"></script>
 
@@ -175,55 +175,62 @@
 <body class='snippet-body'>
 
 
-    <div class="wrapper" style="background: #C4C4C4">
-        <!-- Sidebar  -->
-        <nav id="sidebar" style="background: #C4C4C4">
-            <div class="sidebar-header">
-                <h3 style="color:black;">BIZOPT Partners</h3>
-            </div>
-            <div style="margin: auto; width: 50%">
-                <a href="#" style="font-size: 24px">Тут имя</a>
-            </div >
-                <ul class="list-unstyled components uk-margin-left">
+<div class="wrapper">
+    <!-- Sidebar  -->
+    <nav id="sidebar" style="background-color: #C4C4C4">
+        <div class="sidebar-header">
+            <h3 style="color: black">BIZOPT Partners</h3>
+        </div>
 
-                    <li class="active uk-margin-top">
-                        <h4>Профиль</h4>
-                        <a href="#">Настройки</a>
+        <ul class="list-unstyled components">
+
+
+            <li class="Btn">
+                <a href="#">Главная</a>
+            </li>
+
+
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой
+                    профиль</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li class="ExtBtn">
+                        <a href="#">Данные продавца</a>
                     </li>
-
-
-                    <li class="Btn uk-margin-top">
-                        <h4>Маркетплейс</h4>
-                        <a href="#">Кабинет</a>
-                        <a href="#">Товар</a>
+                    <li class="ExtBtn">
+                        <a href="#">Пользователи</a>
                     </li>
-
-                    <li class="Btn uk-margin-top">
-                        <h4>Платформа</h4>
-                        <a href="#">Кабинет</a>
-                        <a href="#">Профиль</a>
-                        <a href="#">Резюме</a>
-                    </li>
-                    <li class="Btn uk-margin-top">
-                        <a href="#">Выйти</a>
-                    </li>
-
-
-                </ul>
-                <ul class="list-unstyled CTAs">
-
-                    <li>
-                        <a href="/" class="article">Обратно на главую</a>
+                    <li class="ExtBtn">
+                        <a href="#">Мои данные</a>
                     </li>
                 </ul>
-        </nav>
+            </li>
 
-        <!-- Page Content  -->
-        <div id="content">
-            <div id="MainWindowContainer" class="container rounded bg-white" w3-inslude-html="template.html">
-            </div>
+
+            <li class="Btn">
+                <a href="#">Мои товары</a>
+            </li>
+
+            <li class="Btn">
+                <a href="#">Резюме</a>
+            </li>
+
+        </ul>
+
+        <ul class="list-unstyled CTAs">
+
+            <li>
+                <a href="/" class="article">Обратно на главую</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- Page Content  -->
+    <div id="content">
+        <div id="MainWindowContainer" class="container rounded bg-white" w3-inslude-html="template.html">
         </div>
     </div>
+</div>
 
 </body>
 
@@ -273,7 +280,7 @@
 
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
 </script>
 
 
@@ -292,9 +299,6 @@
         color: black;
         text-decoration: none;
         transition: all 0.3s;
-        margin-top: 2%;
-        padding: 3px;
-        padding-left: 0
     }
 
     .navbar {
@@ -322,10 +326,7 @@
     .text-sidebar {
         /* color: $text-sidebar; */
     }
-    .textNav a{
-        margin-top: 1%;
 
-    }
     .wrapper {
         display: flex;
         width: 100%;
@@ -361,9 +362,11 @@
 
     #sidebar ul p {
         /* color: $text-sidebar; */
+        padding: 10px;
     }
 
     #sidebar ul li a {
+        padding: 10px;
         font-size: 1.1em;
         display: block;
     }
