--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -189,22 +189,10 @@
                 <a href="#">Главная</a>
             </li>
 
-
-            <li class="active">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой
-                    профиль</a>
-                <ul class="collapse list-unstyled" id="homeSubmenu">
-                    <li class="ExtBtn">
-                        <a href="#">Данные продавца</a>
-                    </li>
-                    <li class="ExtBtn">
-                        <a href="#">Пользователи</a>
-                    </li>
-                    <li class="ExtBtn">
-                        <a href="#">Мои данные</a>
-                    </li>
-                </ul>
+            <li class="Btn">
+                <a href="#">Настройки</a>
             </li>
+
 
 
             <li class="Btn">
